--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 body {
@@ -41,16 +42,18 @@ canvas {
   padding-top: 8px;
   padding-bottom: 8px;
   border-radius: 24px;
-  background-color: blue;
+  background-color: #2997ff;
+  color: white;
   margin-top: 20px;
   margin-bottom: 20px;
+  border: 1px solid #2997ff;
   transition: background-color 0.3s, border-color 0.3s, color 0.3s;
 }
 
 .btn:hover {
   background-color: transparent;
-  border-color: blue;
-  color: blue;
+  border-color: #2997ff;
+  color: #2997ff;
 }
 
 .color-container {
@@ -182,7 +185,7 @@ canvas {
 }
 
 .link {
-  color: blue;
+  color: #2997ff;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -211,13 +214,13 @@ canvas {
   font-weight: 600;
   font-size: 1.875rem; /* 30px */
   line-height: 2.25rem; /* 36p */
-  color: rgba(243, 244, 246, 0.5);
+  color: rgba(148, 146, 141);
   opacity: 0;
 }
 
-@media (max-width: 767px) {
+@media not all and (min-width: 768px) {
   .hero-title {
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
   }
 }
 
